@@ -15,6 +15,8 @@ Version 1.0dev
 
   Features
 
+- Source-code is now written to disk in debug mode. [malthe]
+  
 - Custom validation error is now raised if inserted string does not
   validate (when debug mode is enabled). [malthe]
 
